# AutoVend

./: .gitignore  README.md  数据准备清单.md
AiModel/: AutoVendAi.py  CodeStructure.md  PERFORMANCE_OPTIMIZATIONS.md  QueryLabels.json  README.md  REFACTOR_README.md  UserProfile.json  auto_vend_ai.py  auto_vend_ai_module.py  batch_processor.py  main.py  utils.py  (+17 more)
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/agent/: __init__.py  guardrails.py  memory.py  response_generator.py  sales_agent.py  schemas.py  stages.py
backend/agent/extractors/: __init__.py  base.py  combined_needs_extractor.py  global_extractor.py  implicit_deductor.py  needs_extractor.py  query_rewriter.py
backend/agent/voice/: __init__.py  asr.py  pipeline.py  tts.py
backend/app/: __init__.py  app.py  config.py  main.py
backend/app/ingestion/: index_builder.py  toml_parser.py
backend/app/models/: schemas.py
backend/app/rag/: query_engine.py  query_rewriter.py  reranker.py
backend/app/routes/: chat.py  profile.py  test_drive.py  voice.py
backend/app/workflow/: stage_workflow.py
backend/docs/: architecture.md  kpi.md  kpi_testing_guide.md  performance_evaluation.md  real_time_voice_solution.md  ux_improvement_proposal.md  voice_module.md
backend/docs/changelog/: v3.0.md  v3.1.md
backend/scripts/: build_index.py
backend/tests/: conftest.py  kpi_report.py  test_agent.py  test_agent_isolation.py  test_api.py  test_base_extractor.py  test_extractors.py  test_index_builder.py  test_kpi_e2e_dialogues.py  test_kpi_extraction.py  test_kpi_stages.py  test_query_engine.py  test_storage.py  test_toml_parser.py  test_voice.py  test_workflow.py
backend/tests/performance/: __init__.py  eval_harness.py  llm_judge.py  rag_metrics.py  scenarios.py  scoring.py  test_performance.py
scripts/: agent_sdk.ipynb  agent_sdk.py  agent_test.ipynb  mcp_graphrag.ipynb  pyproject.toml
(+2497 files in other folders)
